ADDED: ssh credential

--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -10,6 +10,16 @@
                 "element": {"#": "owner"}
             }
         },
+        "name": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "name"},
+                "label": "Name"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.name"}
+            }
+        },
         "address": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -17,7 +27,31 @@
                 "label": "Address"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.address"}
+                "value": {"<->": "@owner.object.credentials.address"}
+            }
+        },
+        "portConverterValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "errorMessage": "Value must be an integer"
+            }
+        },
+        "numberConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "portConverterValidator"}
+            }
+        },
+        "port": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "port"},
+                "label": "Port",
+                "converter": {"@": "numberConverter"}
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.credentials.port"}
             }
         },
         "username": {
@@ -27,37 +61,18 @@
                 "label": "Username"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.username"}
+                "value": {"<->": "@owner.object.credentials.username"}
             }
         },
         "password": {
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "label": "Password"
+                "label": "Password",
+                "label2": "Confirm password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.password"}
-            }
-        },
-        "pubkey": {
-            "prototype": "blue-shark/ui/field-text-area.reel",
-            "properties": {
-                "element": {"#": "pubkey"},
-                "label": "Public key"
-            },
-            "bindings": {
-                "value": {"<->": "@owner.object.pubkey"}
-            }
-        },
-        "hostkey": {
-            "prototype": "blue-shark/ui/field-text-area.reel",
-            "properties": {
-                "element": {"#": "hostkey"},
-                "label": "Host key"
-            },
-            "bindings": {
-                "value": {"<->": "@owner.object.hostkey"}
+                "value": {"<->": "@owner.object.credentials.password"}
             }
         }
     }
@@ -65,11 +80,11 @@
 </head>
 <body>
     <div data-montage-id="owner" class="SshCredentials">
+        <div data-montage-id="name"></div>
         <div data-montage-id="address"></div>
+        <div data-montage-id="port"></div>
         <div data-montage-id="username"></div>
         <div data-montage-id="password"></div>
-        <div data-montage-id="pubkey"></div>
-        <div data-montage-id="hostkey"></div>
     </div>
 </body>
 </html>
