ADDED: vmware credential

--- a/ui/sections/peering/inspectors/vmware-credentials.reel/vmware-credentials.html
+++ b/ui/sections/peering/inspectors/vmware-credentials.reel/vmware-credentials.html
@@ -10,6 +10,26 @@
                 "element": {"#": "owner"}
             }
         },
+        "name": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "name"},
+                "label": "Name"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.name"}
+            }
+        },
+        "address": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "address"},
+                "label": "Address"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.credentials.address"}
+            }
+        },
         "username": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -17,29 +37,18 @@
                 "label": "Username"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.username"}
-            }
-        },
-        "address": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
-            "properties": {
-                "element": {"#": "address"},
-                "label": "address"
-            },
-            "bindings": {
-                "value": {"<->": "@owner.object.address"}
+                "value": {"<->": "@owner.object.credentials.username"}
             }
         },
         "password": {
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "validationPath": "password",
                 "label": "Password",
-                "errorMessage": "Passwords don't match"
+                "label2": "Confirm password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.password"}
+                "value": {"<->": "@owner.object.credentials.password"}
             }
         }
     }
@@ -47,6 +56,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="VmwareCredentials">
+        <div data-montage-id="name"></div>
         <div data-montage-id="address"></div>
         <div data-montage-id="username"></div>
         <div data-montage-id="password"></div>
