--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -158,6 +158,12 @@
             "properties": {
                 "element": {"#": "overview"}
             }
+        },
+        "ntpservers": {
+            "prototype": "./ntpservers.reel",
+            "properties": {
+                "element": {"#": "ntpservers"}
+            }
         }
     }
     </script>
@@ -182,6 +188,7 @@
                 <div data-montage-id="debug" data-arg="debug"></div>
                 <div data-montage-id="mail" data-arg="mail"></div>
                 <div data-montage-id="tunable" data-arg="tunable"></div>
+                <div data-montage-id="ntpservers" data-arg="ntpservers"></div>
             </div>
         </div>
     </div>
