--- a/ui/controls/tree-view.reel/current-node.reel/current-node.html
+++ b/ui/controls/tree-view.reel/current-node.reel/current-node.html
@@ -51,7 +51,8 @@
             },
             "bindings": {
                 "data": {"<-": "@childNodes:iteration.object"},
-                "selected": {"<-": "data.path == @owner.selectedNode"}
+                "selected": {"<-": "data.path == @owner.selectedNode"},
+                "isSelectedPath": {"<-": "data.path == @owner.selectedPath"}
             }
         },
         "currentNodeName": {
