Ensure child-node name is displayed in treeview

--- a/ui/controls/tree-view.reel/child-node.reel/child-node.html
+++ b/ui/controls/tree-view.reel/child-node.reel/child-node.html
@@ -28,7 +28,7 @@
                 "element": {"#": "name"}
             },
             "bindings": {
-                "value": {"<-": "@owner.isSelectedPath ? @owner.data.name + ' ✓' : @owner.data.name"}
+                "value": {"<-": "!!@owner.isSelectedPath ? @owner.data.name + ' ✓' : @owner.data.name"}
             }
         },
         "homeCondition": {
