adds flag to display entries title

--- a/ui/controls/section.reel/section-root.reel/section-root.html
+++ b/ui/controls/section.reel/section-root.reel/section-root.html
@@ -27,7 +27,8 @@
         "entries": {
             "prototype": "ui/controls/viewer.reel",
             "properties": {
-                "element": {"#": "entries"}
+                "element": {"#": "entries"},
+                "displayTitle": "true"
             },
             "bindings": {
                 "object": {"<-": "@owner.object.entries"},
