--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -63,13 +63,24 @@
             "bindings": {
                 "value": {"<-": "@owner.object._meta_data.collectionModelType.constructor.userInterfaceDescriptor.collectionNameExpression.slice(1,-1)"}
             }
+        },
+        "headerCondition": {
+            "prototype": "montage/ui/condition.reel",
+            "properties": {
+                "element": {"#": "headerCondition"}
+            },
+            "bindings": {
+                "condition": {"<-": "@owner.displayTitle"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="Viewer">
-        <div data-montage-id="title" class="Viewer-title"></div>
+        <div data-montage-id="headerCondition">
+            <div data-montage-id="title" class="Viewer-title"></div>
+        </div>
         <div data-montage-id="scrollView">
             <div class="content">
                 <div data-montage-id="list" class="Viewer-list"></div>
