DELETED: redundant code generated by peer-service

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -51,7 +51,7 @@
                 "label": "Username"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.credentials.username"}
+                "value": {"<->": "@owner.object.username"}
             }
         },
         "password": {
@@ -62,7 +62,7 @@
                 "label2": "Confirm password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.credentials.password"}
+                "value": {"<->": "@owner.object.password"}
             }
         }
     }
