adds correct markup and classes, adds label to tables, adds bottom margin help

--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -15,7 +15,7 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "title": "Environments",
+                "label": "Environments",
                 "columns":  [
                     {
                         "value": "variable",
