--- a/ui/sections/containers/controls/table-environment.reel/table-row-environment.reel/table-row-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-row-environment.reel/table-row-environment.html
@@ -9,7 +9,7 @@
                 "element": {"#": "owner"}
             }
         },
-        
+
         "variable": {
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
@@ -36,9 +36,9 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRowEnvironment">
-        <div data-montage-id="variable"></div>
-        <div data-montage-id="value"></div>
+    <div data-montage-id="owner" class="TableRowEnvironment Table-cells">
+        <div><div data-montage-id="variable"></div></div>
+        <div><div data-montage-id="value"></div></div>
     </div>
 </body>
 </html>
