--- a/ui/sections/containers/controls/table-port.reel/table-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-port.html
@@ -15,7 +15,7 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "title": "Ports",
+                "label": "Ports",
                 "columns":  [
                     {
                         "value": "host port"
