--- a/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
@@ -59,10 +59,10 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRowPort">
-        <div data-montage-id="hostPort"></div>
-        <div data-montage-id="containerPort"></div>
-        <div data-montage-id="protocol"></div>
+    <div data-montage-id="owner" class="TableRowPort Table-cells">
+        <div><div data-montage-id="hostPort"></div></div>
+        <div><div data-montage-id="containerPort"></div></div>
+        <div><div data-montage-id="protocol"></div></div>
     </div>
 </body>
 </html>
