--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -45,10 +45,10 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRowVolume">
-        <div data-montage-id="hostPath"></div>
-        <div data-montage-id="containerPath"></div>
-        <div data-montage-id="readOnly"></div>
+    <div data-montage-id="owner" class="TableRowVolume Table-cells">
+        <div><div data-montage-id="hostPath"></div></div>
+        <div><div data-montage-id="containerPath"></div></div>
+        <div><div data-montage-id="readOnly"></div></div>
     </div>
 </body>
 </html>
