--- a/ui/sections/containers/controls/table-volume.reel/table-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.html
@@ -15,7 +15,7 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "title": "Volumes",
+                "label": "Volumes",
                 "columns":  [
                     {
                         "value": "host path"
