--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -219,10 +219,10 @@
                 <div data-montage-id="hostname"></div>
                 <div data-montage-id="host"></div>
                 <div data-montage-id="memoryLimit"></div>
-                <div data-montage-id="environmentsTable" class="g-margin-bottom"></div>
+                <div data-montage-id="environmentsTable" class="g-margin-bottom--double"></div>
                 <div data-montage-id="portsTable" class="g-margin-bottom"></div>
-                <div data-montage-id="exposePorts" class="g-margin-bottom"></div>
-                <div data-montage-id="volumesTable" class="g-margin-bottom"></div>
+                <div data-montage-id="exposePorts" class="g-margin-bottom--double"></div>
+                <div data-montage-id="volumesTable" class="g-margin-bottom--double"></div>
                 <div data-montage-id="interactive"></div>
                 <div data-montage-id="command"></div>
                 <div data-montage-id="autostart"></div>
