fixes style regression on VM creator inspector-option layout

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -382,9 +382,9 @@
             <div data-montage-id="cpu"></div>
             <div data-montage-id="memory"></div>
             <div data-montage-id="autostart"></div>
-            <div data-montage-id="readme" class="g-negative-margin-sides"></div>
-            <div data-montage-id="devices" class="g-negative-margin-sides"></div>
-            <div data-montage-id="volumeDevices" class="g-negative-margin-sides"></div>
+            <div data-montage-id="readme"></div>
+            <div data-montage-id="devices"></div>
+            <div data-montage-id="volumeDevices"></div>
         </div>
     </div>
 </body>
