--- a/ui/sections/peering/inspectors/peer.reel/peer.html
+++ b/ui/sections/peering/inspectors/peer.reel/peer.html
@@ -25,7 +25,7 @@
                 "label": "Peer Type"
             },
             "bindings": {
-                "value": {"<->": "@owner.object._type"}
+                "value": {"<->": "@owner.object.type"}
             }
         },
         "inspector": {
