ADDED: substitution for after-create display

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -10,10 +10,29 @@
                 "element": {"#": "owner"}
             }
         },
+        "substitution": {
+            "prototype": "montage/ui/substitution.reel",
+            "properties": {
+                "element": {"#": "substitution"}
+            },
+            "bindings": {
+                "switchValue": {"<-": "!!@owner.object._isNew + ''"}
+            }
+        },
         "address": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "address"},
+                "label": "Address"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.credentials.address"}
+            }
+        },
+        "addressForDispaly": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "addressForDispaly"},
                 "label": "Address"
             },
             "bindings": {
@@ -64,16 +83,46 @@
             "bindings": {
                 "value": {"<->": "@owner.object.password"}
             }
+        },
+        "state":{
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "state"},
+                "label": "STATE"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.status.state"}
+            }
+        },
+        "roundTripTime":{
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "roundTripTime"},
+                "label": "Round Trip Time"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.status.rtt * 1000 + ' ms'"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="FreenasCredentials">
-        <div data-montage-id="address"></div>
-        <div data-montage-id="port"></div>
-        <div data-montage-id="username"></div>
-        <div data-montage-id="password"></div>
+        <div data-montage-id="substitution">
+            <div data-arg="true">
+                <div data-montage-id="address"></div>
+                <div data-montage-id="port"></div>
+                <div data-montage-id="username"></div>
+                <div data-montage-id="password"></div>
+            </div>
+            <div data-arg="false">
+                <div data-montage-id="addressForDispaly"></div>
+                <div data-montage-id="state"></div>
+                <div data-montage-id="roundTripTime"></div>
+                <div data-montage-id="healthCheck"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
