ADDED: substitution for after-create display

--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -10,6 +10,15 @@
                 "element": {"#": "owner"}
             }
         },
+        "substitution": {
+            "prototype": "montage/ui/substitution.reel",
+            "properties": {
+                "element": {"#": "substitution"}
+            },
+            "bindings": {
+                "switchValue": {"<-": "!!@owner.object._isNew + ''"}
+            }
+        },
         "name": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -74,17 +83,45 @@
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.password"}
             }
+        },
+        "state":{
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "state"},
+                "label": "STATE"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.status.state"}
+            }
+        },
+        "roundTripTime":{
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "roundTripTime"},
+                "label": "Round Trip Time"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.status.rtt"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="SshCredentials">
+        <div data-montage-id="substitution">
+            <div data-arg="false">
+                <div data-montage-id="state"></div>
+                <div data-montage-id="roundTripTime"></div>
+                <div data-montage-id="healthCheck"></div>
+            </div>
+        </div>
         <div data-montage-id="name"></div>
         <div data-montage-id="address"></div>
         <div data-montage-id="port"></div>
         <div data-montage-id="username"></div>
         <div data-montage-id="password"></div>
+
     </div>
 </body>
 </html>
