Migrate storage section to new architecture

--- a/ui/controls/inspector-option.reel/inspector-option.html
+++ b/ui/controls/inspector-option.reel/inspector-option.html
@@ -16,7 +16,8 @@
             },
             "bindings": {
                 "name": {"<-": "@owner.name"},
-                "object": {"<-": "@owner.object"}
+                "object": {"<-": "@owner.object"},
+                "objectType": {"<-": "@owner.objectType ?? @owner.object.Type"}
             }
         }
     }
